--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -43,10 +43,10 @@
                         {% endif %} {% endcomment %}
 
                         <div class="item">
-                            <img src="{{ recipe.thumbnail_image }}">
+                            <img src="/media/{{ recipe.thumbnail_image }}">
                         </div>
                         {% for image in images %}
-                            <div class="item"><img src="{{ image.image.url }}" alt=""></div>
+                            <div class="item"><img src="{{ image.image }}" alt=""></div>
                         {% endfor %}
                     </div>
 
@@ -112,7 +112,7 @@
                     <div class="row">
                         {% for utensilItem in utensilItems %}
                         <div class="col-12 col-lg-3">
-                            <img src="{{utensilItem.utensil.image.url}}" class="img">
+                            <img src="{{utensilItem.utensil.image}}" class="img">
                             <br>
                             <span name="utensilItem-quantity">{{utensilItem.quantity}}</span>
                             <span name="utensilItem-name">{{utensilItem.utensil.name}}</span>
