--- a/templates/recipes/category.html
+++ b/templates/recipes/category.html
@@ -23,7 +23,7 @@
                     {% for category in categories %}
                     <div class="col-12 col-lg-4 item">
                         <a href="{% url 'category-detail' category.slug %}" style="text-decoration: none;">
-                            <img src="{{category.image.url}}">
+                            <img src="/media/{{category.image}}">
                             <div class="detail">
                                 <p>
                                     <span>
